Fix Horizontal Scroll on Desktop

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -95,10 +95,6 @@ h2 {
 
     &.left-oriented {
         padding-top: 30px;
-
-        .container {
-            margin-left: 90px;
-        }
     }
 }
 
